--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 **/3rdparty/glad/** linguist-vendored
-**/3rdparty/imgui/** linguist-vendored
+**/3rdparty/volk/** linguist-vendored
 **/3rdparty/stb/** linguist-vendored
