--- a/voxel-renderer/CMakeLists.txt
+++ b/voxel-renderer/CMakeLists.txt
@@ -38,9 +38,9 @@ include(${VOXEL_RENDERER_ROOT_DIR}/3rdparty/FindVolk.cmake)
 include(${VOXEL_RENDERER_ROOT_DIR}/3rdparty/FindOpenGL.cmake)
 include(${VOXEL_RENDERER_ROOT_DIR}/3rdparty/FindMagicEnum.cmake)
 include(${VOXEL_RENDERER_ROOT_DIR}/3rdparty/FindImgui.cmake)
-include(${VOXEL_RENDERER_ROOT_DIR}/3rdparty/FindTinyObjLoader.cmake)
+include(${VOXEL_RENDERER_ROOT_DIR}/3rdparty/FindAssimp.cmake)
 
 target_link_libraries(${TARGET_NAME} PRIVATE GPUOpen::VulkanMemoryAllocator volk_headers Vulkan::Vulkan)
 target_link_libraries(${TARGET_NAME} PRIVATE Threads::Threads magic_enum::magic_enum spdlog)
-target_link_libraries(${TARGET_NAME} PRIVATE glfw stb imgui glm tinyobjloader)
+target_link_libraries(${TARGET_NAME} PRIVATE glfw stb imgui glm assimp)
 target_link_libraries(${TARGET_NAME} PRIVATE ${OGLLIB} glad)
